src/objects/XLR8_Securities__c.object
<CustomObject>
    <description>XLR8 custom object that holds the security level data - it is relational only to the financial account records</description>
    <fields>
        <fullName>Annual_Income__c</fullName>
        <label>Annual Income</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>As_of_Date__c</fullName>
        <label>As of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Asset_Class__c</fullName>
        <inlineHelpText>This field should contain the asset class / sector / sub-sector as designated in your Portfolio Accounting System.</inlineHelpText>
        <label>Asset Class</label>
        <picklist>
            <picklistValues>
                <fullName>Absolute Return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash/Money Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt Instrument</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diversified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy/Natural Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost_Basis__c</fullName>
        <label>Cost Basis</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <label>Data Source</label>
        <picklist>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Import</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Financial_Account__r.Entity__r.Id, &quot;&quot;&amp; Financial_Account__r.Entity__r.Name&amp;&quot;&quot;, &quot;_parent&quot;)</formula>
        <label>Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Financial Account</label>
        <referenceTo>XLR8_Assets_Liabilities__c</referenceTo>
        <relationshipLabel>Securities</relationshipLabel>
        <relationshipName>Securities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Import_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This field is used for migration purposes only.  It can be hidden post migration, or if no migration will be performed.</inlineHelpText>
        <label>Import ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_of_Origin__c</fullName>
        <description>Name of the package from which the security was imported.</description>
        <label>Package of Origin</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_of_Assets__c</fullName>
        <label>Percent of Assets</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity_of_Shares__c</fullName>
        <description>New XLR8 field to replace the old XLR8 Quantity field.</description>
        <label>Quantity of Shares</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Description__c</fullName>
        <label>Security Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Stock_Price_Chart__c</fullName>
        <formula>IF(LEN( Name) &lt;5,HYPERLINK(&quot;http://finance.yahoo.com/q?s= &quot; &amp; Name, IMAGE(&quot;http://ichart.yahoo.com/t?s=&quot; &amp; Name , &quot;Ticker Image&quot;, 96,192)),IF(AND(RIGHT(Name,1)=&quot;X&quot;, LEN( Name )=5), HYPERLINK(&quot;http://finance.yahoo.com/q?s= &quot; &amp; Name, IMAGE(&quot;http://im.morningstar.com/Graph/Growth10K4Year/USA_&quot; &amp; Name &amp; &quot;.png&quot;,&quot;Ticker Image&quot;, 132,273)),&quot;Other&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stock Price Chart</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Value__c</fullName>
        <label>Total Value</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <description>Combination of Account Number and Symbol</description>
        <label>Unique ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Income__c</fullName>
        <label>Unit Income</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yield__c</fullName>
        <label>Yield</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Security</label>
    <nameField>
        <label>Symbol</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Securities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>